Tue Mar  3 15:09:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/lib/dl/cparser.rb (DL::CParser::parse_signature): fixed
	  variable name.

	* ext/dl/lib/dl/pack.rb (DL::PackInfo): reduced redundan
	  initialization.

	* ext/dl/lib/dl/stack.rb (DL::Stack): ditto.

	* ext/dl/lib/dl/value.rb (DL::ValueUtil#wrap_arg): NULL for nil.

	* test/dl: moved from ext/dl/test.

Tue Mar  3 14:57:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (main): passes $(MAKE) to mkmain_cmd

	* ext/extmk.rb (extmake): removes object files no longer used.

	* ext/extmk.rb (command_output): uses arguments to invoke make.

Tue Mar  3 01:56:03 2009  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (SecureRandom.urlsafe_base64): delete padding.

Mon Mar  2 21:39:08 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (SS_LEN): defined unconditionally.

Mon Mar  2 21:26:42 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_socket_creds): supress warnings.

Mon Mar  2 21:13:42 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (rsock_discard_cmsg_resource): defined
	  unconditionally.

Mon Mar  2 21:06:40 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (addrinfo_mload): don't use "sun" variable
	  for Solaris.

Mon Mar  2 21:01:36 2009  Tanaka Akira  <akr@fsij.org>

	* file.c: include fcntl.h for O_RDONLY on Solaris.

Mon Mar  2 19:43:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/uri/common.rb (URI::Parser#escape): escaped string is ascii
	  only.

	* lib/uri/common.rb (URI::Parser#unescape): converts bytewise.
	  [ruby-dev:38005], [ruby-dev:38110]

Mon Mar  2 16:40:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT, README.EXT.ja (Macros): added HAVE_RUBY_*_H.

Mon Mar  2 12:22:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (init_env): keeps wide chars as wide chars.

Mon Mar  2 11:01:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
