@@ -1,4 +1,8 @@
-Tue Mar  3 15:09:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Tue Mar  3 15:40:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/dl/dl.c (rb_dl_init_callbacks): autoloads callbacks.
+
+	* ext/dl/callback: split from dl.
 
 	* ext/dl/lib/dl/cparser.rb (DL::CParser::parse_signature): fixed
 	  variable name.
